# python-project-lvl2

./: .gitignore  pyproject.toml
gendiff/scripts/: gendiff.py
tests/: test_python_project_lvl2.py
