[tool.poetry]
name = "kmayev_gendiff"
version = "0.1.0"
description = "This Brain Games project is created as a part of education process on Hexlet portal"
authors = ["Konstantin Mayev <k.mayev@gmail.com>"]
packages = [
  { include = "gendiff" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: Freeware",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = 'https://github.com/kmayev/python-project-lvl2'


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
wemake-python-styleguide = "^0.14.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
